# duckdb_backend_boilerplate

./: .gitignore  Cargo.toml  README.md  data.db  data.db.wal
config/: default.toml  init.sql  refresh.sql
src/: dbinit.rs  health.rs  lib.rs  main.rs  packages.rs  refreshlog.rs  release.rs  routes.rs  settings.rs  state.rs
