[package]
name = "duckdb_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow = "58.1.0"
arrow-json = "58.1.0"
axum = "0.8.9"
axum-extra = { version = "0.12.6", features = ["typed-header"] }
config = "0.15.22"
dotenvy = "0.15.7"
duckdb = { version = "1.10502.0", features = ["bundled", "r2d2"] }
futures-util = "0.3.32"
r2d2 = "0.8.10"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"] }
tokio-stream = "0.1.18"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "trace", "tracing"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
